# PrismQ

./: .coverage  .env  .gitignore  .gitmodules  =1.0.0  CODING_GUIDELINES.md  FINAL_SUMMARY.md  MODULE_HIERARCHY_UPDATED.md  MVP_WORKFLOW_DOCUMENTATION.md  MVP_WORKFLOW_DOCUMENTATION_CS.md  PR-SUMMARY.md  PRODUCTION_READINESS_SUMMARY.md  PR_CODE_REVIEW_CHECKLIST.md  PullAll.bat  PushAll.bat  README.md  README_CS.md  REFACTOR-001-COMPLETION-SUMMARY.md  REFACTOR-001-PHASE-2-SUMMARY.md  REFACTOR-001-PHASE-4-AV-SRC-SUMMARY.md  USAGE_GUIDE.md  WORKFLOW.md  WORKFLOW_CS.md  pytest.ini  test_startup_infrastructure.py  verification_after_merge.txt
.github/: copilot-instructions.md
IdeaInspiration/Classification/: .env.example  .envrc  CHANGELOG.md  README.md  REORGANIZATION.md  TAXONOMY.md  example.py  example_generalized.py  pyproject.toml  requirements.txt  setup.py
IdeaInspiration/Classification/_meta/_scripts/: README.md  docs.ps1  format.bat  lint.bat  quickstart.bat  setup.ps1  test.sh
IdeaInspiration/Classification/_meta/doc/: README.md
IdeaInspiration/Classification/_meta/docs/: README.md
IdeaInspiration/Classification/_meta/issues/: KNOWN_ISSUES.md
IdeaInspiration/Classification/_meta/tests/: test_batch_processing.py  test_builder.py  test_category_classifier.py  test_extract.py  test_idea_inspiration.py  test_story_detection_integration.py  test_story_detector.py
IdeaInspiration/Classification/_meta/tests/workers/: test_classification_worker.py  test_unclassified_processing.py
IdeaInspiration/Classification/docs/: API.md  USER_GUIDE.md
IdeaInspiration/Classification/issues/: README.md
IdeaInspiration/Classification/prismq/idea/classification/: __init__.py  builder.py  categories.py  category_classifier.py  extract.py  text_classifier.py
IdeaInspiration/Classification/scripts/: README.md  format.ps1  quickstart.bat  quickstart.ps1  quickstart.sh  setup.bat  setup.ps1  setup.sh  test.bat  test.ps1
IdeaInspiration/Classification/src/: __init__.py
IdeaInspiration/Classification/src/classification/: __init__.py  builder.py  extract.py
IdeaInspiration/Classification/src/workers/: README.md  __init__.py  classification_worker.py  factory.py
IdeaInspiration/Classification/tests/: test_builder.py  test_category_classifier.py  test_extract.py  test_idea_inspiration.py  test_text_classifier.py
IdeaInspiration/ConfigLoad/: .env.example  .envrc  README.md  __init__.py  logging_config.py  pyproject.toml  requirements.txt
IdeaInspiration/ConfigLoad/_meta/docs/: README.md
IdeaInspiration/ConfigLoad/_meta/tests/: test_config.py
IdeaInspiration/ConfigLoad/src/: logging_config.py
IdeaInspiration/ConfigLoad/tests/: __init__.py  test_config.py  test_logging_config.py
IdeaInspiration/Model/: .env.example  CONFIGURATION_GUIDE.md  README.md  idea_inspiration.py  idea_inspiration_db.py  pyproject.toml  setup_db.ps1
IdeaInspiration/Model/_meta/docs/: SETUP.md
IdeaInspiration/Model/_meta/issues/: README.md
IdeaInspiration/Model/_meta/tests/: test_idea_inspiration_db.py  test_model.py
IdeaInspiration/Model/src/: idea_inspiration_db.py
IdeaInspiration/Model/tests/: test_idea_inspiration_db.py
IdeaInspiration/Scoring/: .envrc  README.md  REORGANIZATION.md  pyproject.toml  requirements.txt  test_batch_input.py
IdeaInspiration/Scoring/_meta/_scripts/: setup.ps1
IdeaInspiration/Scoring/_meta/examples/: worker_usage.py
IdeaInspiration/Scoring/_meta/tests/: test_batch_processing.py  test_text_scorer.py  test_workers.py
IdeaInspiration/Scoring/doc/source/: api.rst
IdeaInspiration/Scoring/docs/: AI_TEXT_SCORING.md
IdeaInspiration/Scoring/mod/: README.md
IdeaInspiration/Scoring/mod/scoring/: text_scorer.py
IdeaInspiration/Scoring/scripts/: README.md  run_worker.py  setup.ps1
IdeaInspiration/Scoring/src/: __init__.py  main.py
IdeaInspiration/Scoring/src/scoring/: __init__.py
IdeaInspiration/Scoring/src/workers/: README.md  __init__.py  base_scoring_worker.py  scoring_worker.py
IdeaInspiration/Scoring/tests/: test_scoring.py  test_text_scorer.py
IdeaInspiration/Source/Spotify/: README.md  pyproject.toml
IdeaInspiration/Sources/Community/CommentMiningSource/: .env.example  .gitignore  README.md  pyproject.toml
IdeaInspiration/Sources/Community/CommentMiningSource/src/: __init__.py  cli.py
IdeaInspiration/Sources/Community/CommentMiningSource/src/core/: __init__.py  config.py  sentiment_analyzer.py
IdeaInspiration/Sources/Community/CommentMiningSource/src/plugins/: __init__.py  multiplatform_plugin.py
IdeaInspiration/Sources/Community/QASource/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
IdeaInspiration/Sources/Community/QASource/src/: __init__.py  cli.py
IdeaInspiration/Sources/Community/QASource/src/core/: __init__.py  config.py  database.py
IdeaInspiration/Sources/Community/QASource/src/plugins/: __init__.py  stackexchange_plugin.py
IdeaInspiration/Sources/Events/SportsHighlights/: .env.example  .gitignore  README.md  pyproject.toml
IdeaInspiration/Sources/Events/SportsHighlights/src/: __init__.py  cli.py
IdeaInspiration/Sources/Events/SportsHighlights/src/core/: __init__.py  config.py  event_processor.py  metrics.py
IdeaInspiration/Sources/Events/SportsHighlights/src/plugins/: __init__.py  thesportsdb_plugin.py
T/Idea/Model/: README.md  __init__.py  pyproject.toml  setup_db.bat  setup_db.ps1  setup_db.sh
T/Idea/Model/_meta/docs/: AI_GENERATION.md  DATABASE.md  FIELDS.md  IMPLEMENTATION_SUMMARY.md  LOCAL_AI_GENERATION.md  MULTI_FORMAT.md  TRANSLATION.md
T/Idea/Model/_meta/examples/: example_usage.py  summary_translation_examples.md
T/Idea/Model/_meta/tests/: __init__.py  test_idea.py  test_simple_idea.py  test_simple_idea_db.py  test_story_translation.py  test_summary_translation.py  test_translation_db.py
T/Idea/Model/src/: __init__.py  idea.py  idea_db.py  simple_idea.py  simple_idea_db.py  story_translation.py
T/Review/Title/From/Content/Idea/: IMPLEMENTATION_SUMMARY.md  __init__.py  by_content_and_idea.py  pyproject.toml  review_title_from_content_idea.py  title_review.py
(+3774 files in other folders)
