[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "prismq-idea-classification"
version = "2.1.0"
description = "Platform-agnostic content classification with generalized text analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "PrismQ Team", email = "dev@prismq.io"}
]
keywords = ["prismq", "classification", "content-analysis", "story-detection", "category-classification", "short-form-video", "nlp"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
"Bug Reports" = "https://github.com/PrismQDev/PrismQ.IdeaInspiration.Classification/issues"
"Source" = "https://github.com/PrismQDev/PrismQ.IdeaInspiration.Classification"
"Documentation" = "https://github.com/PrismQDev/PrismQ.IdeaInspiration.Classification/tree/main/_meta/doc"

[tool.setuptools]
packages = ["prismq", "prismq.idea", "prismq.idea.classification"]

[tool.pytest.ini_options]
testpaths = ["_meta/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=prismq --cov-report=html --cov-report=term --cov-report=json"

[tool.coverage.run]
source = ["prismq"]
omit = [
    "*/tests/*",
    "*/_meta/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
precision = 1
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
