[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismq-idea-sources-community-commentminingsource"
version = "1.0.0"
description = "PrismQ module for mining comments across social platforms"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "Proprietary"}
authors = [{name = "PrismQ", email = "dev@prismq.com"}]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "sqlalchemy>=2.0.0",
    "vaderSentiment>=3.3.2",
]

[project.scripts]
comment-mining-source = "src.cli:main"

[tool.setuptools]
packages = ["src"]
